--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <h1 class="sign-up-title">MediRec</h1>
     <input type="text" class="sign-up-input" placeholder="Enter your username" autofocus>
     <input type="password" class="sign-up-input" placeholder="Enter your password">
-    <input type="submit" value="Sign me in!" class="sign-up-button">
-	<input type="button" value="New? Sign Up!" class="sign-up-button">
+    <input type="submit" value="Sign me in!" class="sign-up-button1">
+	<input type="button" value="New? Sign Up!" class="sign-up-button2">
   </form>
     </body>
 </html>
