--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     <input type="password" class="sign-up-input" placeholder="Enter your password">
     <input type="submit" value="Sign me in!" class="sign-up-button1">
 	<input type="button" value="New? Sign Up!" class="sign-up-button2">
+	<img  type="logo" style="position:absolute; left:400; top : 0;" src="MediRec.png" alt="logo"  />
   </form>
     </body>
 </html>
