--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,7 @@
 		<input type="password" class="sign-up-input" placeholder="Enter your desired password">
 		<input type="password" class="sign-up-input" placeholder="Re-enter your desired password">
 		<input type="submit" value="Sign me up!" class="sign-up-button">
+		<img class="logo"  style="position:absolute; left:400; top : 0;" src="MediRec.png" alt="logo"  />
 	</form>
     </body>
 </html>
